[tool.poetry]
name = "tracer"
version = "0.1.0"
description = "A simple server to provide CodeLens / pythontutor traces"
authors = ["Brad Miller <bonelake@mac.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
runestone = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
